doc/ug: ipv4 chapter title

--- a/doc/src/users-guide/ch-ipv4.tex
+++ b/doc/src/users-guide/ch-ipv4.tex
@@ -1,6 +1,4 @@
-% based on 'integration' branch: 446a1265c28822456bc0230d362bbabdee7778ba (2012-03-19)
-
-\chapter{Ipv4}
+\chapter{The IPv4 Protocol Family}
 \label{cha:ipv4}
 
 
