--- a/doc/src/users-guide/ch-routing.tex
+++ b/doc/src/users-guide/ch-routing.tex
@@ -1,13 +1,68 @@
 \chapter{Internet Routing}
 \label{cha:routing}
 
-
-\ifdraft TODO
 \section{Overview}
 
-Blah blah blah
-\fi
+INET Framework has models for several internet routing protocols, including
+RIP, OSPF and BGP. 
 
+The easiest way to add routing to a network is to use the \nedtype{Router} 
+NED type for routers. \nedtype{Router} contains a conditional instance
+for each of the above protocols. These submodules can be enabled by
+setting the \ttt{hasRIP}, \ttt{hasOSPF} and/or \ttt{hasBGP} parameters to
+\ttt{true}.
+
+Example:
+
+\begin{verbatim}
+**.hasRIP = true
+\end{verbatim}
+
+There are also NED types called \nedtype{RipRouter}, \nedtype{OspfRouter},
+\nedtype{BgpRouter}, which are all \nedtype{Router}s with appropriate
+routing protocol enabled.
+
+\section{RIP}
+\label{sec:rip}
+
+RIP (Routing Information Protocol) is a distance-vector routing protocol
+which employs the hop count as a routing metric. RIP prevents routing loops
+by implementing a limit on the number of hops allowed in a path from source 
+to destination.
+
+The \nedtype{Rip} module implements distance vector routing as
+specified in RFC 2453 (RIPv2) and RFC 2080 (RIPng). Per-interface
+configuration can be specified in an XML file.
+
+\nedtype{RipRouter} is a \nedtype{Router} with the RIP protocol enabled.
+
+
+\section{OSPF}
+\label{sec:ospf}
+
+OSPF (Open Shortest Path First) is a routing protocol for IP networks. 
+It uses a link state routing (LSR) algorithm and falls into the group 
+of interior gateway protocols (IGPs), operating within a single 
+autonomous system (AS).
+
+The \nedtype{Ospf} module implements the OSPF Version 2. Areas and routers
+can be configured using an XML file.
+
+\nedtype{OspfRouter} is a \nedtype{Router} with the OSPF protocol enabled.
+
+
+\section{BGP}
+\label{sec:bgp}
+
+BGP (Border Gateway Protocol) is a standardized exterior gateway protocol
+designed to exchange routing and reachability information among 
+autonomous systems (AS) on the Internet.
+
+The \nedtype{Bgp} module implements BGP Version 4. The model implements 
+RFC 4271, with some limitations. Autonomous Systems and rules can be
+configured in an XML file.
+
+\nedtype{BgpRouter} is a \nedtype{Router} with the BGP protocol enabled.
 
 %%% Local Variables:
 %%% mode: latex
