doc/ug: ch-authors-guide added

--- a/doc/src/users-guide/inet-users-guide.tex
+++ b/doc/src/users-guide/inet-users-guide.tex
@@ -462,6 +462,9 @@
 \include{ch-emulation}
 \cleardoublepage
 
+\include{ch-authors-guide}
+\cleardoublepage
+
 \include{ch-history}
 \cleardoublepage
 
